# Calculateur_Emission_Carbone_Aviation

./: AirCarrier.xlsx  Aircraft.py  Airline.py  Data_Reader.py  Donnees.yaml  EXEMPLE.md  Engine.py  FleetUtilization.csv  LICENSE  LICENSE.md  Lecteuryamel.py  Main.py  README.md  Travel.py  airports.csv  requirements.txt  setup.cfg  setup.py
Data/: AirCarrierData.csv  AirportData.csv  EmissionData.csv  FleetUtilizationData.csv
Modules/: __init__.py
Modules/Avion/: Aircraft.py  Airline.py  Engine.py  __init__.py
Modules/InterfaceYamel/: Donnees.yaml  Lecteuryamel.py  Lecteuryaml.py  __init__.py  list_aircrafts.csv
Modules/Lecture_Calculs_Manipulations/: Data_Reader.py  Travel.py  __init__.py
Modules_Calculateur_Emission_Carbone_Aviation/Avion/: Aircraft.py  Airline.py  __init__.py
Modules_Calculateur_Emission_Carbone_Aviation/InterfaceYamel/: Donnees.yaml  Lecteuryamel.py
Modules_Calculateur_Emission_Carbone_Aviation/Lecture_Calculs_Manipulations/: Data_Reader.py  Travel.py
source/: Aircraft.rst  Airline.rst  Data_Reader.rst  Lecteuryamel.rst  Modules.Avion.rst  Modules.InterfaceYamel.rst  Modules.Lecture_Calculs_Manipulations.rst  Modules.rst  Travel.rst  conf.py  index.rst  modules.rst
