[metadata]
name = Calculateur_Emission_Carbone_Aviation
version = 0.1
author = Lucas Chamaz, Alexandre Panhaleux, Étienne Lionnet, Gabriel Gunther
author_email = lucas.chamaz.1@ens.etsmtl.ca, alenxandre.panhaleux.1@ens.etsmtl.ca, etienne.lionnet.1@ens.etsmtl.ca, gabriel.gunther.1@ens.etsmtl.ca
description = Projet de session du Groupe_PF_06, dans le cadre du cours MGA802 de la session été 2023, ÉTS
long_description = This is a longer description for the project
url = https://github.com/P3PiT0/Calculateur_Emission_Carbone_Aviation
keywords = aircraft, aviation, airplane, carbon, emission, calculator, pollution, avion, calculateur, emissions, polluantes

[options]
python_requires = >= 3.9.13
install_requires =
    numpy
    pandas
    ambiance
    PyYAML